@@ -163,27 +163,6 @@
               </packing>
             </child>
             <child>
-              <object class="GtkCheckButton" id="login_checkbutton">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="label" translatable="yes">Automatic Login?</property>
-                <property name="use_underline">True</property>
-                <property name="relief">GTK_RELIEF_NORMAL</property>
-                <property name="focus_on_click">True</property>
-                <property name="active">False</property>
-                <property name="inconsistent">False</property>
-                <property name="draw_indicator">True</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="right_attach">2</property>
-                <property name="top_attach">2</property>
-                <property name="bottom_attach">3</property>
-                <property name="x_options">fill</property>
-                <property name="y_options"/>
-              </packing>
-            </child>
-            <child>
               <object class="GtkCheckButton" id="show_password_checkbutton">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
